--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,10 @@
+machine:
+  environment:
+    LANG: en_US.UTF-8
+    XCODE_PROJECT: yolo.xcodeproj
+    XCODE_SCHEME: shrugs
+  xcode:
+    version: "6.3.1"
 test:
   override:
     - rake spec
